# templates

./: README.rst  dot-travis.yml  github-workflows-pyrelease.yaml  py-logging.py  pyproject.toml  setup.py
dot-github--pytest/workflows/: pytest.yaml
