[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "module_name" # FIXME

[project]
name = "pip-name" # FIXME
authors = [{name = "NAME"}]  # FIXME
readme = "README.md"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    # FIXME
    "pyyaml",
]

[project.optional-dependencies]
test = [
    # FIXME
    "pytest",
]

[project.scripts]
    script-name = "module_name:main"

[project.urls]
Home = "https://example.com/"

# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish
